--- a/scss/_sponsor.scss
+++ b/scss/_sponsor.scss
@@ -14,12 +14,7 @@
         margin: $margin 100px;
     }
     .empresasPatrocinadorasUno{
-        width:$widthTotal;
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        align-items:center;
-        margin: 30px auto;
+        @include empresas_patrocinadoras();
         animation: carouselUno 60s linear infinite;
         @keyframes carouselUno{
             0%{
@@ -38,20 +33,9 @@
                 transform: translate(-100%);
             }
         }
-        img{
-            width: 100px;
-            margin: 0px 50px;
-            filter: grayscale(100%);
-            object-fit: cover;
-        }
     }
     .empresasPatrocinadorasDos{
-        width:  $widthTotal;
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        align-items:center;
-        margin: 30px auto;
+        @include empresas_patrocinadoras();
         animation: carouselDos 60s linear infinite;
         @keyframes carouselDos{
             0%{
@@ -69,12 +53,6 @@
             100%{
                 transform: translate(0%);
             }
-        }
-        img{
-            width: 100px;
-            margin: 0px 50px;
-            filter: grayscale(100%);
-            object-fit: cover;
         }
     }
 }
