--- a/scss/_jobs.scss
+++ b/scss/_jobs.scss
@@ -3,18 +3,19 @@
     width: $containerWidth;
     max-width: 1050px;
     margin:  $sectionMargin;
-}
-.containerDevelopment{
-    .titleDevelopment{
+    .titleDevelopment, .titleDesign{
         color: $whiteColor;
         font-size: $LargeTitle ;
         font-weight: $bold;
         text-align: left;
         padding-bottom: 100px;
     }
-    .vacanciesDevelopment{
+    .vacanciesDevelopment, .vacanciesDesign{
         display: flex;
         flex-direction: column;
+    }
+}
+.containerDevelopment{
         .cardJob{
             display: flex;
             flex-direction: row;
@@ -117,18 +118,8 @@
             }
         }
     }
-}
+
 .containerDesign{
-    .titleDesign{
-        color: $whiteColor;
-        font-size: $LargeTitle;
-        font-weight: $bold;
-        text-align: left;
-        padding-bottom: 100px;
-        }
-    .vacanciesDesign{
-        display: flex;
-        flex-direction: column;
         .cardJob{
             display: flex;
             flex-direction: row;
@@ -232,4 +223,4 @@
             }
         }
     }
-}
+
